--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <h1>Nate's Lyrical Listicle</h1>
   <h2>Top 5 Artists of the 1970's</h2>
   <ul>
-    <li><a href="https://en.wikipedia.org/wiki/Taco">Tacos</a></li>
-    <li><a href="https://en.wikipedia.org/wiki/Hummus">Hummus</a></li>
+    <li><a href="https://en.wikipedia.org/wiki/Taco">Billy Joel</a></li>
+    <li><a href="https://en.wikipedia.org/wiki/Hummus">Elton John</a></li>
   </ul>
 </body>
 </html>
