--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
 </head>
 <body>
   <h1>Nate's Lyrical Listicle</h1>
-  <h2>Top 5 Artists of the 1970's</h2>
+  <h2>Favorite Artists of the 1970's</h2>
   <ul>
-    <li><a href="https://en.wikipedia.org/wiki/Taco">Billy Joel</a></li>
-    <li><a href="https://en.wikipedia.org/wiki/Hummus">Elton John</a></li>
+    <li><a href="https://en.wikipedia.org/wiki/Fleetwood_Mac">Fleetwood Mac</a></li>
+    <li><a href="https://en.wikipedia.org/wiki/Billy_Joel">Billy Joel</a></li>
+    <li><a href="https://en.wikipedia.org/wiki/Elton_John">Elton John</a></li>
+    <li><a href="https://en.wikipedia.org/wiki/Eagles_(band)">Eagles</a></li>
+    <li><a href="https://en.wikipedia.org/wiki/Stevie_Wonder">Stevie Wonder</a></li
   </ul>
 </body>
 </html>
